--- a/src/app.css
+++ b/src/app.css
@@ -30,6 +30,12 @@
 	--color-secondary-700: #0369a1;
 	--color-secondary-800: #075985;
 	--color-secondary-900: #0c4a6e;
+
+	--color-ocean-start: #1e3a8a;
+	--color-ocean-25: #1e40af;
+	--color-ocean-50: #2563eb;
+	--color-ocean-75: #3b82f6;
+	--color-ocean-end: #60a5fa;
 }
 
 @source "../node_modules/flowbite-svelte/dist";
@@ -39,5 +45,18 @@
 	/* disable chrome cancel button */
 	input[type='search']::-webkit-search-cancel-button {
 		display: none;
+	}
+}
+
+@layer utilities {
+	.ocean-background {
+		background: linear-gradient(
+			135deg,
+			theme(--color-ocean-start) 0%,
+			theme(--color-ocean-25) 25%,
+			theme(--color-ocean-50) 50%,
+			theme(--color-ocean-75) 75%,
+			theme(--color-ocean-end) 100%
+		);
 	}
 }
